examples/test/testpolicy11856.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11856
  namespace: namespace272
spec:
  podSelector:
    matchLabels:
      key46: value18
      key32: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value22
          key5: value36
          key42: value0
      podSelector:
        matchLabels:
          key22: value11
          key3: value5
          key8: value10
